@@ -41,6 +41,7 @@ namespace MonoTorrent.Client
     {
         #region Member Variables
 
+        private int connectTime;
         public string NulledAt = string.Empty;
         private PeerId peerId;
         private Peer peer;
@@ -70,6 +71,12 @@ namespace MonoTorrent.Client
         public ConnectionManager ConnectionManager
         {
             get { return this.engine.ConnectionManager; }
+        }
+        
+        public int ConnectTime
+        {
+            get { return connectTime; }
+            set { connectTime = value; }
         }
 
         public ClientEngine Engine
